...
      context = context,
      onSuccess = { navigationActions.navigateToAndClearAllBackStack(Screen.HOME) },
      authViewModel = firebaseAuthViewModel,
      successMessage = "Login successful")

  Scaffold(
      modifier = Modifier.testTag("loginScreen"),
      topBar = {
        AuthTopAppBar(navigationAction = { navigationActions.navigateTo(Screen.WELCOME) })
      }) { paddingValues ->
        Column(
            modifier =
                Modifier.padding(paddingValues)
...
              CustomInputField(
                  value = email,
                  onValueChange = { email = it },
                  label = "Email",
                  placeholder = "Enter email address",
                  keyboardType = KeyboardType.Email,
                  modifier = Modifier.testTag("inputEmail"))

              // Password input field
              CustomInputField(
                  value = password,
                  onValueChange = { password = it },
                  label = "My Password",
                  placeholder = "Enter password",
                  keyboardType = KeyboardType.Password,
                  visualTransformation = PasswordVisualTransformation(),
                  supportingText = "6-18 characters",
                  modifier = Modifier.testTag("inputPassword"))

              // Spacer between password field and login button
              Spacer(modifier = Modifier.height(16.dp))

              // Login button
              LoginButton(
...
              if (email.isBlank() || password.isBlank()) {
                Toast.makeText(context, "Please fill all fields", Toast.LENGTH_SHORT).show()
              } else {
                authViewModel.login(email, password)
              }
            },
            modifier = Modifier.fillMaxSize().testTag("loginButton"),
            colors =
                ButtonDefaults.buttonColors(
                    containerColor = Color.Transparent, contentColor = Color.White),
            shape = RoundedCornerShape(30.dp),
            elevation = null // Optional: Remove button shadow if desired
            ) {
...
