...
fun WelcomeScreen(navigationActions: NavigationActions) {
  Column(
      modifier =
          Modifier.fillMaxSize()
              .background(MaterialTheme.colorScheme.background)
              .verticalScroll(rememberScrollState())
              .testTag("welcomeScreen"),
      verticalArrangement = Arrangement.Top,
      horizontalAlignment = Alignment.CenterHorizontally) {
        Spacer(modifier = Modifier.height(80.dp))

        // App logo
        Image(
...
fun LoginButton(navigationActions: NavigationActions) {
  Box(
      modifier =
          Modifier.width(320.dp)
              .height(48.dp)
              .background(brush = PrimaryGradientBrush, shape = RoundedCornerShape(30.dp))
              .testTag("welcomeLoginButton"),
      contentAlignment = Alignment.Center) {
        // Transparent Button to allow gradient background to show
        Button(
            onClick = { navigationActions.navigateTo(Screen.LOGIN) },
            modifier = Modifier.fillMaxSize(),
            colors =
...
